[package]
name = "pallet-kitties"
version = "2.0.0"
authors = ["wanghaoran <wanghaoran@induschain.cn>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }


[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
pallet-randomness-collective-flip = { version = '2.0.0' }
[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-io/std",
    "sp-runtime/std",
    "balances/std",
]